@@ -1,5 +1,9 @@
 2013-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* display a warning for config file version errors
+
+2013-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* catch input log file opening errors
 
 2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>
